# atro2

./: .gitignore  CHANGELOG.md  README.md  cleanup_and_test.ps1  models.json  pm.md  projektbrief.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  release.yml
astroai/: __init__.py
astroai/astrometry/: __init__.py  catalog.py  pipeline_step.py  solver.py
astroai/core/: catalog_cache.py  noise_estimator.py  onnx_registry.py  processing_history.py
astroai/core/calibration/: __init__.py  calibrate.py  gpu_engine.py  matcher.py  metrics.py  scanner.py  worker.py
astroai/core/io/: __init__.py  fits_io.py  frame_stats_export.py  raw_io.py  tiff_io.py  xisf_io.py
astroai/core/pipeline/: __init__.py  ai_alignment_step.py  (+14 more)
astroai/inference/: __init__.py  coordinate_extractor.py  sky_atlas.py
astroai/licensing/: __init__.py  client.py  exceptions.py  machine.py  models.py  store.py  validator.py
astroai/processing/: __init__.py
astroai/project/: __init__.py  project_file.py  recent_files.py  serializer.py  summary.py  validator.py
astroai/ui/: __init__.py  license_adapter.py  models.py  preview_worker.py
benchmarks/: calibration_gpu_bench.py
landing/: index.html
scripts/: BUILD.md  agents.json  arch_payload.json  arch_plan.md  astroai.spec  download_astap.py  e1_payload.json  e1_result.json  e2_payload.json  e2_result.json  e3_payload.json  e3_result.json  e4_payload.json  e4_result.json
scripts/hooks/: hook-astropy.py
tests/: conftest.py
tests/integration/: test_annotation_overlay.py  test_astrometry_e2e.py  test_background_e2e.py  test_color_calibration_pipeline.py  test_deconvolution_e2e.py  test_drizzle_pipeline.py  test_licensing.py  test_lrgb_e2e.py  test_narrowband_e2e.py  test_pipeline_e2e.py  test_platesolving_pipeline.py  test_project_persistence_e2e.py  test_starless_e2e.py
tests/unit/: test_color_calibration.py
workers/licensing-api/: package-lock.json  package.json  tsconfig.json  wrangler.toml
(+319 files in other folders)
