[tool.poetry]
name = "astroai-suite"
version = "0.1.0"
description = "AI-powered astrophotography processing suite"
authors = []
readme = "README.md"
packages = [{include = "astroai"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
PySide6 = "^6.7"
torch = "^2.3"
torchvision = "^0.18"
numpy = "^1.26"
astropy = "^6.1"
rawpy = "^0.21"
Pillow = "^10.3"
scipy = "^1.13"
tqdm = "^4.66"
onnxruntime = "^1.18"
cryptography = "^43.0"
PyJWT = {version = "^2.8", extras = ["crypto"]}
httpx = "^0.27"
keyring = {version = "^25.0", optional = true}
pywin32 = {version = "^306", optional = true, markers = "sys_platform == 'win32'"}

[tool.poetry.extras]
secure-keystore = ["keyring", "pywin32"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-qt = "^4.4"
ruff = "^0.4"
mypy = "^1.10"
pyinstaller = "^6.6"

[tool.poetry.scripts]
astroai = "astroai.ui.main.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
